welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:10: error: illegal start of declaration
		gauche();gauche();avance();
                ^BDRBuggle:10: error: illegal start of declaration
		gauche();gauche();avance();
                         ^BDRBuggle:10: error: illegal start of declaration
		gauche();gauche();avance();
                                  ^BDRBuggle:12: error: ')' expected but 'if' found.
	if (litMessage(): String :=A) {
        ^BDRBuggle:15: error: ';' expected but 'if' found.
	if (litMessage(): String :=B) {
        ^