welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage()) {
	if (litMessage(): String :=R) {
		droite();avance();
	}
	if (litMessage(): String :=L) {
		gauche();avance();
	}
	if (litMessage(): String :=I {
		gauche();gauche();avance();
	}
	if (litMessage(): String :=A) {
		avance();
	}
	if (litMessage(): String :=B) {
		avance();avance();
	}
	if (litMessage(): String :=C) {
		avance();avance();avance();
	}
	if (litMessage(): String :=Z) {
		recule();
	}
	if (litMessage(): String :=Y) {
		recule();recule();
	}
	if (litMessage(): String :=X) {
		recule();recule();recule();
	}
}

